Inspection accessibilté, corrections des deux contrastes provoquant une erreur pour l'onglet tous et l'adresse

--- a/assets/style.css
+++ b/assets/style.css
@@ -89,9 +89,6 @@ body {
   font-size: 14px;
 }
 
-#gallery {
-  /*	min-height: 100vh; */
-}
 .title {
   text-align: center;
   padding-block: 2em;
@@ -101,7 +98,7 @@ body {
 }
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
-  color: #fff;
+  color: #000;
   background-color: #beb45a;
   border-radius: 0;
 }
@@ -353,4 +350,9 @@ input[type="submit"] {
   .picture {
     width: 80%;
   }
+}
+
+.adress {
+  text-decoration: none;
+  color: #000;
 }
